# _TerraMater

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXTask_static_64.lib  PhysX_64.exp  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SnippetConvexMeshCreate_64.ilk  SnippetRender_static_64.lib  SnippetTriangleMeshCreate_64.ilk  SnippetUtils_static_64.lib
presentation/: presentation.html
presentation/video/: waving_grass.mkv
shaders/: compute.comp  compute.comp.spv  compute.frag  compute.frag.spv  compute.vert  compute.vert.spv  obj.frag  obj.frag.spv  obj.vert  obj.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv
src/: AABB.cpp  AABB.h  Application.cpp  Application.h  BenchmarkStatus.h  BigVertex.h  BiomData.h  BoxData.h  BufferCreator.cpp  BufferCreator.h  Camera.cpp  Camera.h  CameraData.h  Chunk.cpp  Chunk.h  ChunkStack.cpp  ChunkStack.h  CloudTexture.cpp  CloudTexture.h  CommandWrapper.cpp  CommandWrapper.h  ComputeSettings.cpp  ComputeSettings.h  ComputeWrapper.cpp  ComputeWrapper.h  Coordinates.h  Cube.cpp  Cube.h  CubeType.h  DescriptorWrapper.cpp  DescriptorWrapper.h  DeviceFinder.cpp  DeviceFinder.h  FileLoader.cpp  FileLoader.h  FileWriter.cpp  FileWriter.h  Frustum.cpp  Frustum.h  Grass.cpp  (+79 more)
